@@ -1,3 +1,7 @@
+2020-12-16  Dirk Eddelbuettel  <edd@debian.org>
+
+	* .github/workflows/ci.yaml: Add container-based CI runner
+
 2020-11-06  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION: More URL updates, e.g. http -> https
